--- a/pages/news/20210929.md
+++ b/pages/news/20210929.md
@@ -10,7 +10,7 @@ Ling Pan, Tabish Rashid, Bei Peng, Longbo Huang, Shimon Whiteson
 
 Bayesian Bellman Operators  
 Matthew Fellows, Kristian Hartikainen, Shimon Whiteson  
-**Oral Presentation**
+**Spotlight Presentation**
 
 Snowflake: Scaling GNNs to high-dimensional continuous control via parameter freezing  
 Charlie Blake, Vitaly Kurin, Maximilian Igl, Shimon Whiteson
